# Wave-Machine-Firmware

./: .gitignore  Beep-Machine-Firmware.code-workspace  CMakeLists.txt  README.md  Wave-Machine-Firmware.code-workspace  adsr.h  beep_machine.cpp  config.cc  config.h  controls.cc  controls.h  dac.cpp  dac.h  debug.h  demo.cpp  functions.cc  functions.h  hardware.cc  hardware.cpp  hardware.h  interval.cc  interval.h  log.h  log_table.h  looking.h  mailbox.cc  mailbox.h  main.cc  main.cpp  midi.cc  midi.h  modulation.h  msc_disk.cc  note_handling.cc  note_handling.hpp  note_priority.cc  note_priority.h  oscillators.h  pagination.cc  pagination.cpp  (+22 more)
drivers/: adc.cc  adc.h  button.cc  button.h  dac.cc  dac.h  eeprom.cc  eeprom.h  interpolation.cc  interpolation.h  keys.cc  keys.h  leds.cc  leds.h  mux.cc  mux.h  rgb.cc  rgb.h  shiftreg.cc  shiftreg.h  sn74595.pio  switch.h  uart.cc  uart.h  usb.cc  usb.h
synth/: adsr.cc  adsr.h  arp.cc  arp.h  beat_clock.cc  beat_clock.h  clock.cc  clock.h  controls.cc  controls.h  filter.cc  filter.h  fx.cc  fx.h  log_table.h  modulation.cc  modulation.h  note_handling.cc  note_handling.h  note_priority.cc  note_priority.h  oscillator.cc  oscillator.h  phase.h  preset.h  presetOLD.h  protoNP  protoNP.h  resouces.cc  resources.cc  resources.h  settings.cc  settings.h  synth.cc  synth.h  wavetable.h
